--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <title>Image galery</title>
 </head>
 <body>
-
+<!-- SITE HEADER -->
+<header>
+  <a href="#">
+    <img src="https://placehold.co/600x400" alt="Placeholder Logo" width="200" height="80">
+  </a>
+  <nav>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html">Nature</a></li>
+    <li><a href="index.html">Building</a></li>
+    <li><a href="index.html">People</a></li>
+    <li><a href="index.html">Sea</a></li>
+    <li><a href="index.html">Abstract</a></li>
+    <li><a href="index.html">Wallpaper</a></li>
+    <li><a href="index.html">Car</a></li>
+  </nav>
+</header>
 </body>
 </html>
